--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Exploring the DOM</title>
 
-  <link rel="stylesheet" href="../assets/style.css">
+  <link rel="stylesheet" href="assets/style.css">
   <script defer src="script.js"></script>
 </head>
 
@@ -16,30 +16,12 @@
     </header>
   
     <main>
-      <h1>This is a first level title</h1>
-  
-      <p class="important">This a paragraph</p>
-  
-      <p id="p-with-an-id">This paragraph has an id</p>
-  
-      <div>
-        <p>This paragraph is inside a div and is followed by an important image<br /></p>
-        <figure>
-          <img src="../assets/domtoretto.jpg" alt="Dominic Toretto" class="important" />
-          <figcaption>Dominic Toretto, from Fast&Furious</figcaption>
-        </figure>
-      </div>
-  
-      <p>This is the last paragraph, it contains</p>
-      <figure>
-        <img src="../assets/kitten.jpeg" alt="A kitten" />
-        <figcaption>A kitten, a baby cat</figcaption>
-      </figure>
+      
+
     </main>
   
-    <footer>
-      The footer usually contains <span class="important">meaningful content</span>, well *usually* ...
-    </footer>
-  </body>
-  </html>
+</body>
+
+
+</html>
 
