--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 
 <body>
     <header>
-     
+        <audio autoplay>
+            <source src="barca.mp3" type="audio/mp3">
+            Votre navigateur ne prend pas en charge l'élément audio.
+          </audio>
     </header>
   
     <main>
@@ -21,7 +24,7 @@
     </main>
 
     <footer>
-        
+
     </footer>
   
 </body>
